--- a/oxidental.html
+++ b/oxidental.html
@@ -77,34 +77,34 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Meat Burger 150g</div>
-			<div class="divrowr">2.96$</div>
+			<div class="divrowr">3.84$</div>
 			<br>
 			<div class="divrowl">Double Meat Burger</div>
-			<div class="divrowr">4.41$</div>
+			<div class="divrowr">6.82$</div>
 			<br>
 			<div class="divrowl">Swiss Mushroom Burger</div>
-			<div class="divrowr">4.6$</div>
+			<div class="divrowr">7.44$</div>
 			<br>
 			<div class="divrowl">Double Swiss Mushroom Burger</div>
-			<div class="divrowr">5.2$</div>
+			<div class="divrowr">7.94$</div>
 			<br>
 			<div class="divrowl">Chicken Burger</div>
-			<div class="divrowr">2.55$</div>
+			<div class="divrowr">3.78$</div>
 			<br>
 			<div class="divrowl">Double Chicken Burger</div>
-			<div class="divrowr">3.14$</div>
+			<div class="divrowr">5.6$</div>
 			<br>
 			<div class="divrowl">Swiss Mushroom Chicken Burger</div>
-			<div class="divrowr">3.28$</div>
+			<div class="divrowr">4.22$</div>
 			<br>
 			<div class="divrowl">Double Swiss Mushroom Chicken Burger</div>
-			<div class="divrowr">4.52$</div>
+			<div class="divrowr">7.00$</div>
 			<br>
 			<div class="divrowl">Chicken Breast Burger</div>
-			<div class="divrowr">2.82$</div>
+			<div class="divrowr">3.64$</div>
 			<br>
 			<div class="divrowl">Fish Burger</div>
-			<div class="divrowr">1.82$</div>
+			<div class="divrowr">1.96$</div>
 		</div>
 		
 <div class="accordion__button">Plates</div>
@@ -112,43 +112,43 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Crispy</div>
-			<div class="divrowr">3.15$</div>
+			<div class="divrowr">3.35$</div>
 			<br>
 			<div class="divrowl">Nuggets</div>
-			<div class="divrowr">2.11$</div>
+			<div class="divrowr">1.98$</div>
 			<br>
 			<div class="divrowl">Chicken Popcorn</div>
-			<div class="divrowr">2.25$</div>
+			<div class="divrowr">2.43$</div>
 			<br>
 			<div class="divrowl">Chicken Escalope</div>
-			<div class="divrowr">2.6$</div>
+			<div class="divrowr">3.44$</div>
 			<br>
 			<div class="divrowl">Cordon Bleu</div>
-			<div class="divrowr">3.39$</div>
+			<div class="divrowr">5.02$</div>
 			<br>
 			<div class="divrowl">Chicken Pesto</div>
-			<div class="divrowr">3.15$</div>
+			<div class="divrowr">3.96$</div>
 			<br>
 			<div class="divrowl">Grilled Steak</div>
-			<div class="divrowr">4.87$</div>
+			<div class="divrowr">7.78$</div>
 			<br>
 			<div class="divrowl">Mushroom Meat Steak</div>
-			<div class="divrowr">4.66$</div>
+			<div class="divrowr">6.44$</div>
 			<br>
 			<div class="divrowl">Pesto Meat Steak</div>
-			<div class="divrowr">4.69$</div>
+			<div class="divrowr">7.04$</div>
 			<br>
 			<div class="divrowl">Mushroom Chicken Breast</div>
-			<div class="divrowr">3.98$</div>
+			<div class="divrowr">5.78$</div>
 			<br>
 			<div class="divrowl">Chicken Breast</div>
-			<div class="divrowr">2.85$</div>
+			<div class="divrowr">3.64$</div>
 			<br>
 			<div class="divrowl">Rosemary Chicken Breast</div>
-			<div class="divrowr">3.28$</div>
+			<div class="divrowr">4.64$</div>
 			<br>
 			<div class="divrowl">Sauted Vegetables</div>
-			<div class="divrowr">1.06$</div>
+			<div class="divrowr">1.00$</div>
 			<br>
 		</div>
 
@@ -158,59 +158,59 @@
 	
 
 			<div class="divrowl">Fajita</div>
-			<div class="divrowr">1.92$</div>
+			<div class="divrowr">1.96$</div>
 			<br>
 			<div class="divrowl">Chicken Sub</div>
-			<div class="divrowr">2.6$</div>
+			<div class="divrowr">3.24$</div>
 			<br>
 			<div class="divrowl">Philadelphia</div>
-			<div class="divrowr">3.12$</div>
+			<div class="divrowr">4.00$</div>
 			<br>
 			<div class="divrowl">Steak Sub</div>
-			<div class="divrowr">3.4$</div>
+			<div class="divrowr">4.56$</div>
 			<br>
 			<div class="divrowl">Chicken Ceaser Sandwich</div>
-			<div class="divrowr">2.5$</div>
+			<div class="divrowr">2.6$</div>
 			<br>
 			<div class="divrowl">Chicken Pesto Sandwich</div>
-			<div class="divrowr">2.2$</div>
+			<div class="divrowr">2.4$</div>
 			<br>
 			<div class="divrowl">Tacos Meat</div>
-			<div class="divrowr">3.9$</div>
+			<div class="divrowr">5.74$</div>
 			<br>
 			<div class="divrowl">Tacos Chicken</div>
-			<div class="divrowr">3.05$</div>
+			<div class="divrowr">4.36$</div>
 			<br>
 			<div class="divrowl">Meat Quesadilla</div>
-			<div class="divrowr">3.8$</div>
+			<div class="divrowr">5.62$</div>
 			<br>
 			<div class="divrowl">Chicken Quesadilla</div>
-			<div class="divrowr">2.82$</div>
+			<div class="divrowr">3.78$</div>
 			<br>
 			<div class="divrowl">Vegetables Quesadilla</div>
-			<div class="divrowr">2.3$</div>
+			<div class="divrowr">2.9$</div>
 		</div>
 <div class="accordion__button">Pasta</div>
 	
 		<div class="accordion__content">
 	
 			<div class="divrowl">Broccoli Penne Pasta</div>
-			<div class="divrowr">2.53$</div>
+			<div class="divrowr">2.58$</div>
 			<br>
 			<div class="divrowl">Penne Arrabbiata</div>
-			<div class="divrowr">2.34$</div>
+			<div class="divrowr">2.8$</div>
 			<br>
 			<div class="divrowl">Pesto Pasta chicken</div>
-			<div class="divrowr">2.71$</div>
+			<div class="divrowr">3.38$</div>
 			<br>
 			<div class="divrowl">Spaghetti Bolognese </div>
-			<div class="divrowr">2.71$</div>
+			<div class="divrowr">3.5$</div>
 			<br>
 			<div class="divrowl">Lasagne Bolognese</div>
-			<div class="divrowr">4.69$</div>
+			<div class="divrowr">6.2$</div>
 			<br>
 			<div class="divrowl">Fettuccine Alfredo</div>
-			<div class="divrowr">2.46$</div>
+			<div class="divrowr">3.12$</div>
 			
 				</div>	
 <div class="accordion__button">Sea Food</div>
@@ -218,16 +218,19 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Calamar Pane</div>
-			<div class="divrowr">4.17$</div>
+			<div class="divrowr">6.26$</div>
 			<br>
 			<div class="divrowl">Calamar Provencial</div>
-			<div class="divrowr">4.17$</div>
+			<div class="divrowr">6.04$</div>
 			<br>
 			<div class="divrowl">Shrimp Tiger Pane</div>
-			<div class="divrowr">4.7$</div>
+			<div class="divrowr">7.4$</div>
 			<br>
 			<div class="divrowl">Shrimp Provencial </div>
-			<div class="divrowr">4.7$</div>
+			<div class="divrowr">7.4$</div>
+			<br>
+			<div class="divrowl">Fish & Fries Oane</div>
+			<div class="divrowr">3.86$</div>
 			<br>
 		
 		</div>
@@ -236,10 +239,10 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Buffalo Wings</div>
-			<div class="divrowr">2.5$</div>
+			<div class="divrowr">3.26$</div>
 			<br>
 			<div class="divrowl">Barbecue Wings</div>
-			<div class="divrowr">2.5$</div>
+			<div class="divrowr">3.26$</div>
 			
 			
 			
@@ -249,13 +252,13 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Caesar Salad</div>
-			<div class="divrowr">1.75$</div>
+			<div class="divrowr">1.25$</div>
 			<br>
 			<div class="divrowl">Pasta Salad</div>
-			<div class="divrowr">2.12$</div>
+			<div class="divrowr">1.95$</div>
 			<br>
 			<div class="divrowl">Tuna Pasta</div>
-			<div class="divrowr">2.87$</div>
+			<div class="divrowr">2.52$</div>
 			
 					
 					
@@ -265,25 +268,25 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Coleslaw</div>
-			<div class="divrowr">0.74$</div>
+			<div class="divrowr">0.8$</div>
 			<br>
 			<div class="divrowl">Fries 300g</div>
-			<div class="divrowr">1.36$</div>
+			<div class="divrowr">1.02$</div>
 			<br>
 			<div class="divrowl">Potato Wedges 300g</div>
-			<div class="divrowr">1.98$</div>
+			<div class="divrowr">1.52$</div>
 			<br>
 			<div class="divrowl">Jalappenos Cheddar Fries</div>
-			<div class="divrowr">2.34$</div>
+			<div class="divrowr">1.73$</div>
 			<br>
 			<div class="divrowl">Potato Puree 300g</div>
-			<div class="divrowr">1.07$</div>
+			<div class="divrowr">1.12$</div>
 			<br>
 			<div class="divrowl">Curly Fries 200g</div>
-			<div class="divrowr">1.5$</div>
+			<div class="divrowr">1.14$</div>
 			<br>
 			<div class="divrowl">Garlic Bread</div>
-			<div class="divrowr">2.03$</div>
+			<div class="divrowr">1.62$</div>
 		</div>	
 
 
