--- a/oriental.html
+++ b/oriental.html
@@ -250,7 +250,7 @@
 			<div class="divrowr">2.4$</div>
 			<br>
 			<div class="divrowl">عجة</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">1.65$</div>
 			<br>
 			<div class="divrowl">بطاطا بكزبرة</div>
 			<div class="divrowr">1.57$</div>
