--- a/oriental.html
+++ b/oriental.html
@@ -156,7 +156,7 @@
 		<div class="accordion__content_daily" id="Wednesday">
 	
 			<div class="divrowl">بيف ستروغونوف مع الارز الابيض</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">4.11$</div>
 			<br>
 			
 			
@@ -185,7 +185,7 @@
 		<div class="accordion__content_daily" id="Saturday">
 	
 			<div class="divrowl">جوانح مطفاية بروفنسيال</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">2.96$</div>
 			<br>
 			
 			
