--- a/oriental.html
+++ b/oriental.html
@@ -136,8 +136,8 @@
 	
 		<div class="accordion__content_daily" id="Monday">
 	
-			<div class="divrowl">كفتة بالصينية بالفرن مع ارز</div>
-			<div class="divrowr">4.2$</div>
+			<div class="divrowl">شاكرية بالدجاج باللبن</div>
+			<div class="divrowr">2.64$</div>
 			<br>
 			
 			
@@ -145,8 +145,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">مصارين</div>
-			<div class="divrowr">3.01$</div>
+			<div class="divrowl">عجة  بالصينية </div>
+			<div class="divrowr">1.65$</div>
 			<br>
 			
 			
@@ -155,8 +155,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">فاصولياء بالارز</div>
-			<div class="divrowr">3.02$</div>
+			<div class="divrowl">كبة لبنية مع ارز</div>
+			<div class="divrowr">2.85$</div>
 			<br>
 			
 			
@@ -164,8 +164,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">مقلوبة باذنجان</div>
-			<div class="divrowr">2.96$</div>
+			<div class="divrowl">دجاج بالصينية مع بطاطا</div>
+			<div class="divrowr">3.35$</div>
 			<br>
 			
 			
@@ -174,8 +174,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">بفتاك مع بطاطا</div>
-			<div class="divrowr">5.6$</div>
+			<div class="divrowl">كبسة سعودية بالدجاج مع اللبن</div>
+			<div class="divrowr">3.19$</div>
 			<br>
 			
 			
@@ -184,8 +184,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">بطاطا سوفليه باللحمة المفرومة والكعك والموزوريلا</div>
-			<div class="divrowr">2.68$</div>
+			<div class="divrowl">كفتة بالصينية بالفرن بطحينية مع بطاطا</div>
+			<div class="divrowr">4.2$</div>
 			<br>
 			
 			
