--- a/oriental.html
+++ b/oriental.html
@@ -174,8 +174,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">كبسة سعودية بالدجاج مع اللبن</div>
-			<div class="divrowr">3.19$</div>
+			<div class="divrowl">بفتاك لحمة مع بطاطا</div>
+			<div class="divrowr">5.6$</div>
 			<br>
 			
 			
@@ -184,8 +184,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">كفتة بالصينية بالفرن بطحينية مع بطاطا</div>
-			<div class="divrowr">4.2$</div>
+			<div class="divrowl">ملوخية مع الرز </div>
+			<div class="divrowr">2.8$</div>
 			<br>
 			
 			
