--- a/oriental.html
+++ b/oriental.html
@@ -145,8 +145,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">عجة  بالصينية </div>
-			<div class="divrowr">1.65$</div>
+			<div class="divrowl">كفتة بالدجاج مع بطاطا</div>
+			<div class="divrowr">3.25$</div>
 			<br>
 			
 			
@@ -155,8 +155,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">كبة لبنية مع ارز</div>
-			<div class="divrowr">2.85$</div>
+			<div class="divrowl">اوزي بالفرن مع ارز</div>
+			<div class="divrowr">2.25$</div>
 			<br>
 			
 			
@@ -164,8 +164,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">دجاج بالصينية مع بطاطا</div>
-			<div class="divrowr">3.35$</div>
+			<div class="divrowl">ارز بالخضار مع اللحمة المفرومة والمكسرات</div>
+			<div class="divrowr">2.7$</div>
 			<br>
 			
 			
@@ -174,8 +174,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">بفتاك لحمة مع بطاطا</div>
-			<div class="divrowr">5.6$</div>
+			<div class="divrowl">شيش برك مع الارز والعدس</div>
+			<div class="divrowr">3.3$</div>
 			<br>
 			
 			
@@ -184,8 +184,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">ملوخية مع الرز </div>
-			<div class="divrowr">2.8$</div>
+			<div class="divrowl">صيادية سمك </div>
+			<div class="divrowr">4.8$</div>
 			<br>
 			
 			
