--- a/oriental.html
+++ b/oriental.html
@@ -145,8 +145,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">كفتة بالدجاج مع بطاطا</div>
-			<div class="divrowr">3.25$</div>
+			<div class="divrowl">جوانح مطفاية بروفنسيال</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
@@ -155,8 +155,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">اوزي بالفرن مع ارز</div>
-			<div class="divrowr">2.25$</div>
+			<div class="divrowl">سودة بزيت وثوم وحامض مع بطاطا</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
@@ -164,8 +164,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">ارز بالخضار مع اللحمة المفرومة والمكسرات</div>
-			<div class="divrowr">2.7$</div>
+			<div class="divrowl">كفتة بالصينية بالفرن مع ارز</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
@@ -174,8 +174,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">شيش برك مع الارز والعدس</div>
-			<div class="divrowr">3.3$</div>
+			<div class="divrowl">مصارين</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
@@ -184,8 +184,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">صيادية سمك </div>
-			<div class="divrowr">4.8$</div>
+			<div class="divrowl">بيف ستروغونوف مع ارز</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
