--- a/oriental.html
+++ b/oriental.html
@@ -146,7 +146,7 @@
 		<div class="accordion__content_daily" id="Tuesday">
 	
 			<div class="divrowl">جوانح مطفاية بروفنسيال</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">2.96$</div>
 			<br>
 			
 			
@@ -156,7 +156,7 @@
 		<div class="accordion__content_daily" id="Wednesday">
 	
 			<div class="divrowl">سودة بزيت وثوم وحامض مع بطاطا</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">3$</div>
 			<br>
 			
 			
@@ -165,7 +165,7 @@
 		<div class="accordion__content_daily" id="Thursday">
 	
 			<div class="divrowl">كفتة بالصينية بالفرن مع ارز</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">4.2$</div>
 			<br>
 			
 			
@@ -175,7 +175,7 @@
 		<div class="accordion__content_daily" id="Friday">
 	
 			<div class="divrowl">مصارين</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">3$</div>
 			<br>
 			
 			
@@ -185,7 +185,14 @@
 		<div class="accordion__content_daily" id="Saturday">
 	
 			<div class="divrowl">بيف ستروغونوف مع ارز</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">4.1$</div>
+			<br>
+			
+			</div>
+		<div class="accordion__content_daily" id="Sunday">
+	
+			<div class="divrowl">سمك اجاج مع سرفيس مشوي او مقلي</div>
+			<div class="divrowr">13.15$</div>
 			<br>
 			
 			
