--- a/oriental.html
+++ b/oriental.html
@@ -136,8 +136,8 @@
 	
 		<div class="accordion__content_daily" id="Monday">
 	
-			<div class="divrowl">شاكرية بالدجاج باللبن</div>
-			<div class="divrowr">2.64$</div>
+			<div class="divrowl">بفتاك مع بطاطا</div>
+			<div class="divrowr">5.6$</div>
 			<br>
 			
 			
@@ -145,8 +145,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">جوانح مطفاية بروفنسيال</div>
-			<div class="divrowr">2.96$</div>
+			<div class="divrowl">ملوخية ولرز </div>
+			<div class="divrowr">2.8$</div>
 			<br>
 			
 			
@@ -155,8 +155,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">سودة بزيت وثوم وحامض مع بطاطا</div>
-			<div class="divrowr">3$</div>
+			<div class="divrowl">ارز بالخضار مع اللحمة المفرومة والمكسرات</div>
+			<div class="divrowr">2.7$</div>
 			<br>
 			
 			
@@ -164,8 +164,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">كفتة بالصينية بالفرن مع ارز</div>
-			<div class="divrowr">4.2$</div>
+			<div class="divrowl">بطاط باللحمة المفرومة والفطر والمكسرات</div>
+			<div class="divrowr">4.14$</div>
 			<br>
 			
 			
@@ -174,8 +174,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">مصارين</div>
-			<div class="divrowr">3$</div>
+			<div class="divrowl">سمكة حرة </div>
+			<div class="divrowr">6.04$</div>
 			<br>
 			
 			
@@ -184,8 +184,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">بيف ستروغونوف مع ارز</div>
-			<div class="divrowr">4.1$</div>
+			<div class="divrowl">اوزي بالفرن مع ارز</div>
+			<div class="divrowr">2.04$</div>
 			<br>
 			
 			</div>
