--- a/oriental.html
+++ b/oriental.html
@@ -145,8 +145,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">شاكرية بالدجاج باللبن</div>
-			<div class="divrowr">2.64$</div>
+			<div class="divrowl">كبة بالصينية</div>
+			<div class="divrowr">3.23$</div>
 			<br>
 			
 			
@@ -155,8 +155,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">معكرونة غراتين بالفطر والدجاج وصوص البشامال</div>
-			<div class="divrowr">4$</div>
+			<div class="divrowl">شيخ المحشي مع الارز </div>
+			<div class="divrowr">3$</div>
 			<br>
 			
 			
@@ -164,8 +164,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">كبة لبنية</div>
-			<div class="divrowr">2.85$</div>
+			<div class="divrowl">مقلوبة باذنجان مع اللحمة والدجاج</div>
+			<div class="divrowr">2.96$</div>
 			<br>
 			
 			
@@ -174,8 +174,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">عجة  بالصينية بالخضار</div>
-			<div class="divrowr">1.65$</div>
+			<div class="divrowl">مصارين</div>
+			<div class="divrowr">4$</div>
 			<br>
 			
 			
@@ -184,8 +184,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">بفتاك مع بطاطا</div>
-			<div class="divrowr">5.6$</div>
+			<div class="divrowl">جوانح مطفاية بروفنسيال</div>
+			<div class="divrowr">3.2$</div>
 			<br>
 			
 			</div>
