--- a/oriental.html
+++ b/oriental.html
@@ -126,7 +126,7 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">لحمة بعجين قرص صغير</div>
-			<div class="divrowr">0.4$</div>
+			<div class="divrowr">0.65$</div>
 			<br>
 			
 		</div>
@@ -203,16 +203,19 @@
 		<div class="accordion__content">
 			
 			<div class="divrowl">طاووق</div>
-			<div class="divrowr">1.98$</div>
+			<div class="divrowr">3.2$</div>
+			<br>
+                        <div class="divrowl">كريسبي</div>
+			<div class="divrowr">3.2$</div>
 			<br>
 			<div class="divrowl">مقانق</div>
-			<div class="divrowr">2.12$</div>
+			<div class="divrowr">3.5$</div>
 			<br>
 			<div class="divrowl">سجق</div>
-			<div class="divrowr">2.12$</div>
+			<div class="divrowr">3.5$</div>
 			<br>
 			<div class="divrowl">بطاطا</div>
-			<div class="divrowr">0.85$</div>
+			<div class="divrowr">1.2$</div>
 			<br>
 		</div>
 
@@ -227,7 +230,7 @@
 			<div class="divrowr">7.2$</div>
 			<br>
 			<div class="divrowl">عجة باللحمة</div>
-			<div class="divrowr">2.75$</div>
+			<div class="divrowr">2.74$</div>
 			<br>
 			<div class="divrowl">سبانخ و رز</div>
 			<div class="divrowr">2.8$</div>
@@ -236,22 +239,22 @@
 			<div class="divrowr">1.2$</div>
 			<br>
 			<div class="divrowl">بطاطا علحمة مفرومة مع الفطر والمكسرات</div>
-			<div class="divrowr">4.14$</div>
+			<div class="divrowr">3.9$</div>
 			<br>
 			<div class="divrowl">ملفوف بدبس الرمان</div>
 			<div class="divrowr">2.6$</div>
 			<br>
 			<div class="divrowl">ورق عنب بالزيت</div>
-			<div class="divrowr">1.92$</div>
+			<div class="divrowr">2.25$</div>
 			<br>
 			<div class="divrowl">هندبة بالثوم والحامض</div>
-			<div class="divrowr">0.98$</div>
+			<div class="divrowr">1.35$</div>
 			<br>
 			<div class="divrowl">هندبة بالبصل</div>
-			<div class="divrowr">0.98$</div>
+			<div class="divrowr">1.35$</div>
 			<br>
 			<div class="divrowl">قرص كبة</div>
-			<div class="divrowr">0.6$</div>
+			<div class="divrowr">0.7$</div>
 			<br>
 			<div class="divrowl">سلق ملفوف</div>
 			<div class="divrowr">2.4$</div>
@@ -260,7 +263,7 @@
 			<div class="divrowr">1.65$</div>
 			<br>
 			<div class="divrowl">بطاطا بكزبرة</div>
-			<div class="divrowr">1.57$</div>
+			<div class="divrowr">1.56$</div>
 		</div>
 
 
@@ -269,10 +272,10 @@
 		<div class="accordion__content">
 			
 			<div class="divrowl">تبولة</div>
-			<div class="divrowr">1.28$</div>
+			<div class="divrowr">1.65$</div>
 			<br>
 			<div class="divrowl">فتوش</div>
-			<div class="divrowr">1.43$</div>
+			<div class="divrowr">1.65$</div>
 			<br>
 			<div class="divrowl">سلطة عربية</div>
 			<div class="divrowr">1.1$</div>
