--- a/oriental.html
+++ b/oriental.html
@@ -145,8 +145,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">كبة بالصينية</div>
-			<div class="divrowr">3.23$</div>
+			<div class="divrowl">منسف دجاج مع اللبن</div>
+			<div class="divrowr">3.20$</div>
 			<br>
 			
 			
@@ -155,8 +155,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">شيخ المحشي مع الارز </div>
-			<div class="divrowr">3$</div>
+			<div class="divrowl">كوسى باللبن</div>
+			<div class="divrowr">3.5$</div>
 			<br>
 			
 			
@@ -164,8 +164,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">مقلوبة باذنجان مع اللحمة والدجاج</div>
-			<div class="divrowr">2.96$</div>
+			<div class="divrowl">شاكرية بالدجاج باللبن</div>
+			<div class="divrowr">3$</div>
 			<br>
 			
 			
@@ -174,8 +174,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">ملوخية وارز</div>
-			<div class="divrowr">3.2$</div>
+			<div class="divrowl">دجاج بالصينية</div>
+			<div class="divrowr">3.75$</div>
 			<br>
 			
 			
@@ -184,8 +184,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">كفتة بالدجاج</div>
-			<div class="divrowr">4$</div>
+			<div class="divrowl">كبة لبنية </div>
+			<div class="divrowr">3$</div>
 			<br>
 			
 			</div>
