--- a/oxidental.html
+++ b/oxidental.html
@@ -77,31 +77,31 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Meat Burger (150g Meat)</div>
-			<div class="divrowr">4.25$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Double Meat Burger (200g Meat)</div>
-			<div class="divrowr">5.06$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Swiss Mushroom Burger (150g Meat)</div>
-			<div class="divrowr">5.39$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Double Swiss Mushroom Burger (200g Meat)</div>
-			<div class="divrowr">6.10$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Chicken Burger (150g Chicken)</div>
-			<div class="divrowr">3.01$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Double Chicken Burger (200g Chicken)</div>
-			<div class="divrowr">3.6$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Swiss Mushroom Chicken Burger (150g Chicken)</div>
-			<div class="divrowr">4.07$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Double Swiss Mushroom Chicken Burger (200g Chicken)</div>
-			<div class="divrowr">4.6$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Chicken Breast Burger (100g Chicken)</div>
-			<div class="divrowr">3.65$</div>
+			<div class="divrowr"></div>
 			<br>
 		</div>
 		
@@ -110,43 +110,43 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Crispy (5 PCS)</div>
-			<div class="divrowr">5$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Nuggets (6 PCS)</div>
-			<div class="divrowr">2.37$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Chicken Popcorn (150g Chicken)</div>
-			<div class="divrowr">2.12$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Chicken Escalope (200g Chicken)</div>
-			<div class="divrowr">3.45$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Cordon Bleu (150g Chicken)</div>
-			<div class="divrowr">5.02$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Chicken Pesto (200g Chicken)</div>
-			<div class="divrowr">3.96$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Grilled Steak (200g Meat)</div>
-			<div class="divrowr">6.04$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Mushroom Steak (200g Meat)</div>
-			<div class="divrowr">6.44$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Pesto Steak (200g Meat)</div>
-			<div class="divrowr">6.59$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Mushroom Chicken Breast (200g Chicken)</div>
-			<div class="divrowr">4.39$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Chicken Breast (200g Chicken)</div>
-			<div class="divrowr">3.64$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Rosemary Chicken Breast (200g Chicken)</div>
-			<div class="divrowr">4.5$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Sauted Vegetables</div>
-			<div class="divrowr">1.00$</div>
+			<div class="divrowr"></div>
 			<br>
 		</div>
 
@@ -156,56 +156,56 @@
 	
 
 			<div class="divrowl">Fajita</div>
-			<div class="divrowr">3.6$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Chicken Sub</div>
-			<div class="divrowr">3.24$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Philadelphia</div>
-			<div class="divrowr">3.87$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Steak Sub</div>
-			<div class="divrowr">4.56$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Chicken Ceaser Sandwich</div>
-			<div class="divrowr">2.86$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Tacos Meat</div>
-			<div class="divrowr">4.75$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Tacos Chicken</div>
-			<div class="divrowr">3.76$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Meat Quesadilla</div>
-			<div class="divrowr">4.68$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Chicken Quesadilla</div>
-			<div class="divrowr">3.38$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Vegetables Quesadilla</div>
-			<div class="divrowr">2.70$</div>
+			<div class="divrowr"></div>
 		</div>
 <div class="accordion__button">Pasta</div>
 	
 		<div class="accordion__content">
 	
 			<div class="divrowl">Broccoli Penne Pasta</div>
-			<div class="divrowr">2.58$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Penne Arrabbiata</div>
-			<div class="divrowr">2.8$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Pesto Pasta chicken</div>
-			<div class="divrowr">3.38$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Bolognese </div>
-			<div class="divrowr">3.5$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Lasagne Bolognese</div>
-			<div class="divrowr">6.2$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Fettuccine Alfredo</div>
-			<div class="divrowr">3.12$</div>
+			<div class="divrowr"></div>
 			
 				</div>	
 <div class="accordion__button">Sea Food</div>
@@ -213,16 +213,16 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Calamar Pane (15 PCS)</div>
-			<div class="divrowr">6.26$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Calamar Provencial (15 PCS)</div>
-			<div class="divrowr">6.26$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Shrimp Tiger Pane (15 PCS)</div>
-			<div class="divrowr">7.4$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Shrimp Provencial (15 PCS)</div>
-			<div class="divrowr">7.4$</div>
+			<div class="divrowr"></div>
 			<br>
 			
 		
@@ -232,10 +232,10 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Buffalo Wings (8 PCS)</div>
-			<div class="divrowr">4$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Barbecue Wings (8 PCS)</div>
-			<div class="divrowr">4$</div>
+			<div class="divrowr"></div>
 			
 			
 			
@@ -245,13 +245,13 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Caesar Salad</div>
-			<div class="divrowr">1.40$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Pasta Salad</div>
-			<div class="divrowr">1.95$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Tuna Pasta</div>
-			<div class="divrowr">2.52$</div>
+			<div class="divrowr"></div>
 			
 					
 					
@@ -262,19 +262,19 @@
 	
 			
 			<div class="divrowl">Coleslaw (150g)</div>
-			<div class="divrowr">0.8$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Fries 150g</div>
-			<div class="divrowr">1.02$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Potato Wedges 150g</div>
-			<div class="divrowr">1.52$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Curly Fries 150g</div>
-			<div class="divrowr">1.51$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">Garlic Bread (4 PCS)</div>
-			<div class="divrowr">1.62$</div>
+			<div class="divrowr"></div>
 		</div>	
 
 
